# bl602-rust-wrapper

./: Cargo.toml  README.md  bl_adc.d  bl_dma.d  bl_gpio.d  bl_i2c.d  bl_pwm.d  bl_uart.d  doclinks.md  gen-bindings-adc.d  gen-bindings-dma.d  gen-bindings-spi.d  gen-bindings-wifi.d  gpio.tmp  hal_spi.d  hal_wifi.d
bl602-macros/: Cargo.toml
bl602-macros/src/: README.md  lib.rs  safe_wrap.rs
bl602-sdk/: Cargo.toml  doclinks.md  riscv32imacf-unknown-none-elf.json
bl602-sdk/src/: adc.rs  dma.rs  gpio.rs  gpio.tmp  i2c.rs  i2c.tmp  lib.rs  pwm.rs  pwm.tmp  spi.rs  spi.tmp  uart.rs  wifi.rs
docs/: crates.js  index.md  search-index.js  settings.html  source-files.js
docs/app/: all.html  enum.StrnRep.html  fn.gpio_enable_output.html  fn.gpio_enable_output2.html  fn.gpio_init.html  fn.mgmr_status_code_str.html  fn.set_freq.html  index.html  sidebar-items.js  struct.Strn.html  type.Ptr.html
docs/as_slice/: all.html  index.html  trait.AsMutSlice.html  trait.AsSlice.html
docs/bl602_sdk/: all.html  enum.StrnRep.html  fn.puts.html  fn.time_delay.html  fn.time_ms_to_ticks32.html  index.html  sidebar-items.js  struct.Strn.html  type.Ptr.html  type.String.html
docs/byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html
docs/cty/: all.html  index.html  type.c_char.html  type.c_double.html  type.c_float.html  type.c_int.html  type.c_long.html  type.c_longlong.html  type.c_schar.html  type.c_short.html  type.c_uchar.html  type.c_uint.html  type.c_ulong.html  type.c_ulonglong.html  type.c_ushort.html  type.c_void.html  type.int16_t.html  type.int32_t.html  type.int64_t.html  type.int8_t.html  type.intmax_t.html  type.intptr_t.html  type.ptrdiff_t.html  type.size_t.html  type.ssize_t.html  type.uint16_t.html  type.uint32_t.html  type.uint64_t.html  type.uint8_t.html  type.uintmax_t.html  type.uintptr_t.html
docs/generic_array/: all.html  index.html  macro.arr.html  struct.GenericArray.html  trait.ArrayLength.html
docs/hash32/: all.html  index.html  struct.BuildHasherDefault.html  struct.FnvHasher.html  struct.Murmur3Hasher.html  trait.BuildHasher.html  trait.Hash.html  trait.Hasher.html
docs/heapless/: all.html  index.html  struct.HistoryBuffer.html  struct.IndexMap.html  struct.IndexSet.html  struct.LinearMap.html  struct.String.html  struct.Vec.html  trait.ArrayLength.html  trait.PowerOfTwo.html  type.FnvIndexMap.html  type.FnvIndexSet.html
docs/stable_deref_trait/: all.html  index.html  trait.CloneStableDeref.html  trait.StableDeref.html
docs/typenum/: all.html  index.html  macro.assert_type.html  macro.assert_type_eq.html  macro.cmp.html  macro.op.html  macro.tarr.html  struct.Equal.html  struct.Greater.html  struct.Less.html  type.False.html  type.N1.html  type.N10.html  type.N100.html  type.N1000.html  type.N10000.html  type.N100000.html  type.N1000000.html  type.N10000000.html  type.N100000000.html  type.N1000000000.html  type.N10000000000.html  type.N100000000000.html  type.N1000000000000.html  type.N10000000000000.html  type.N100000000000000.html  type.N1000000000000000.html  type.N10000000000000000.html  type.N100000000000000000.html  type.N1000000000000000000.html  type.N1001.html  type.N1002.html  type.N1003.html  type.N1004.html  type.N1005.html  type.N1006.html  type.N1007.html  (+3251 more)
logs/: sdk-expanded.rs
scripts/: build.sh  gen-bindings.sh
src/: safe_wrap.rs
(+8973 files in other folders)
