# Info about this package
[package]
name          = "bl602-sdk"
version       = "0.0.2"
authors       = ["Lee Lup Yuen <luppy@appkaki.com>"]
edition       = "2018"
description   = "Rust Wrapper for BL602 IoT SDK"
repository    = "https://github.com/lupyuen/bl602-rust-wrapper"
documentation = "https://lupyuen.github.io/bl602-rust-wrapper/"
categories    = ["embedded", "no-std"]
keywords      = ["bl602", "bl604", "riscv"]
readme        = "../README.md"
license       = "Apache-2.0"

# External Rust libraries used by this module
[dependencies]
bl602-macros = { version = "0.0.1", path = "../bl602-macros" }  # Wrapper Macros
heapless     = "0.7.3"  # `static` friendly data structures that don't require dynamic memory allocation: https://crates.io/crates/heapless
cty          = "0.2.1"  # String utilities: https://crates.io/crates/cty

# Build this module as a Rust library, not a Rust application.  We will link this library with the BL602 firmware.
[lib]
name       = "bl602_sdk"  # Output will be named `libbl602_sdk.a`
test       = false
bench      = false
crate-type = ["staticlib"]

# Optional features
[features]
default =  [  # Select the conditional compiled features
]
